--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
+	"compilerOptions": {
+		"module": "commonjs",
+		"target": "esnext",
+		"noImplicitAny": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true
+	},
 	"include": [
 		"src/**/*"
 	]
