--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/lodash": "^4.14.133",
     "@types/moment": "^2.13.0",
+    "@types/pg": "^7.4.14",
     "debug": "^4.1.1",
     "discord.js": "^11.5.0",
     "dotenv": "^8.0.0",
