--- a/.env.defualt
+++ b/.env.defualt
@@ -1,8 +1,4 @@
-DB_USER=postgres
-DB_PASSWORD=password
-DB_NAME=discordbot
-DB_HOST=localhost
-DB_PORT=5432
+DATABASE_URL=postgres://username:password@localhost:5432/discordbot
 
 TOKEN=
 PREFIX=!
