--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "debug": "^4.1.1",
     "discord.js": "^11.5.0",
     "dotenv": "^8.0.0",
-    "graphql": "^14.3.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "pg": "^7.11.0",
+    "python-shell": "^1.0.7",
     "ts-node": "^8.2.0",
     "words-to-numbers": "^1.5.1"
   },
   "devDependencies": {
     "@types/node": "^12.0.3",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.3",
     "nodemon": "^1.19.1",
     "typescript": "^3.5.1"
   }
