--- a/.env.defualt
+++ b/.env.defualt
@@ -1,4 +1,6 @@
-DATABASE_URL=postgres://username:password@localhost:5432/discordbot
+DB_PASSWORD=password
+DB_NAME=discord_bot
+DATABASE_URL=postgres://postgres:password@localhost:5432/discord_bot
 
 TOKEN=
 PREFIX=!
