--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
 		"node": true
 	},
 	"rules": {
+		"semi": "error",
 		"max-lines": ["warn", {"max": 300, "skipBlankLines": true, "skipComments": true}],
 		"indent": ["error", "tab", {"SwitchCase": 1}],
 		"no-tabs": "off",
