--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "discord-bot-js",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "repository": "git@github.com:msawatzky75/discord-bot-js.git",
   "author": "Matthew Sawatzky <34319870+msawatzky75@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "build": "docker build . -t msawatzky75/discord-bot-js",
+    "build": "webpack",
     "db": "DEBUG=* ts-node src/initdb.ts",
     "dev": "DEBUG=bot.* nodemon src/index.ts",
     "start": "ts-node src/index.ts",
@@ -16,12 +16,13 @@
     "debug": "^4.1.1",
     "discord.js": "^11.5.0",
     "dotenv": "^8.0.0",
+    "dotenv-webpack": "^1.7.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
     "pg": "^7.11.0",
     "ts-node": "^8.2.0",
-    "typescript": "^3.5.1",
+    "typescript": "^3.5.2",
     "words-to-numbers": "^1.5.1"
   },
   "devDependencies": {
@@ -40,6 +41,9 @@
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.17.3",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "ts-loader": "^6.0.3",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4"
   }
 }
