--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"noImplicitAny": true,
 		"moduleResolution": "node",
 		"esModuleInterop": true,
-		"outDir": "build"
+		"outDir": "dist"
 	},
 	"include": [
 		"src/**/*",
