--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     image: msawatzky75/discord-bot-js
     restart: always
     environment:
-      DEBUG: bot.*
-      PREFIX: !
-      TOKEN: MjgxOTg5MDUxNTkzMTI5OTk1.XPb6sw.mDFtod8oXwD3Y7oR1UKb3t12Q_s
-      DATABASE_URL: postgres://postgres:password@db:5432/discord_bot
+      PREFIX: ${PREFIX}
+      TOKEN: ${TOKEN}
+      DATABASE_URL: ${DATABASE_URL}
     depends_on:
       - db
 
   db:
+    container_name: discord_bot_database
     image: postgres
     restart: always
     environment:
