--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       PREFIX: ${PREFIX}
       TOKEN: ${TOKEN}
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: postgres://postgres:${DB_PASSWORD}@discord_bot_database:5432/${DB_NAME}
     depends_on:
       - db
 
