--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
 		"max-statements": ["warn", {"max": 100}],
 		"no-plusplus": "off",
 		"no-unused-vars": ["error", {"varsIgnorePattern": "d"}],
+		"quotes": ["error", "single"],
 
 		// Typescript
 		"@typescript-eslint/indent": ["error", "tab", {"SwitchCase": 1}],
