--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "dev": "DEBUG=bot.* nodemon src/index.ts",
+    "dev": "env $(cat .env | grep -E \"^[^#]\") nodemon src/index.ts",
 	  "lint": "eslint src/**/* --ext *.ts",
-    "start": "ts-node src/index.ts",
+    "start": "$(cat .env | grep -E \"^[^#]\") ts-node src/index.ts",
     "test": "TEST=true mocha --require ts-node/register test/**/*.ts"
   },
   "dependencies": {
