--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "debug": "^4.3.2",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "dotenv-webpack": "^7.0.3",
     "inversify": "^6.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -35,8 +34,7 @@
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
     "eslint-plugin-import": "^2.25.3",
-    "nodemon": "^2.0.15",
-    "ts-loader": "^9.2.6"
+    "nodemon": "^2.0.15"
   },
   "packageManager": "yarn@3.1.0"
 }
