--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,8 @@
 		"no-plusplus": "off",
 		"no-unused-vars": ["error", {"varsIgnorePattern": "d"}],
 		"quotes": ["error", "double"],
+		"eol-last": ["error", "always"],
+		"linebreak-style": ["error", "unix"],
 
 		// Typescript
 		"@typescript-eslint/indent": ["error", "tab", {"SwitchCase": 1}],
