--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,13 @@
 {
-	"plugins": [
-		"@typescript-eslint"
-	],
-	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended"
-	],
+	"plugins": ["@typescript-eslint"],
+	"extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
 	"env": {
 		"es6": true,
 		"node": true
 	},
 	"rules": {
-		"semi": "error",
 		"max-lines": ["warn", {"max": 300, "skipBlankLines": true, "skipComments": true}],
-		"indent": ["error", "tab", {"SwitchCase": 1, "FunctionDeclaration": "first"}],
-		"no-tabs": "off",
-		"arrow-parens": ["error", "as-needed"],
-		"comma-dangle": ["error", "always-multiline"],
-		"no-underscore-dangle": ["warn", {"allowAfterThis": true, "allow": ["_id"]}],
 		"global-require": "error",
-		"generator-star-spacing": 0,
-		"object-curly-spacing": ["error", "never"],
-		"object-curly-newline": ["error", {"consistent": true}],
 		"new-cap": "warn",
 		"prefer-arrow-callback": ["error", {"allowNamedFunctions": true}],
 		"class-methods-use-this": "off",
@@ -33,19 +19,14 @@
 		"lines-between-class-members": ["error", "always", {"exceptAfterSingleLine": true}],
 		"max-statements": ["warn", {"max": 100}],
 		"no-plusplus": "off",
-		"no-unused-vars": ["error", {"varsIgnorePattern": "d"}],
-		"quotes": ["error", "double"],
-		"eol-last": ["error", "always"],
-		"linebreak-style": ["error", "unix"],
+		"no-unused-vars": ["error"],
 
 		// Typescript
-		"@typescript-eslint/indent": ["error", "tab", {"SwitchCase": 1}],
 		"@typescript-eslint/no-unused-vars": ["error", {"varsIgnorePattern": "d"}],
-		"@typescript-eslint/member-delimiter-style": ["error", {
-			"multiline": {"delimiter": "comma", "requireLast": true},
-			"singleline": {"delimiter": "comma", "requireLast": false}
-		}],
 		"@typescript-eslint/explicit-member-accessibility": ["off"],
-		"@typescript-eslint/explicit-function-return-type": ["off", {"allowExpressions": true, "allowTypedFunctionExpressions": true}]
+		"@typescript-eslint/explicit-function-return-type": [
+			"off",
+			{"allowExpressions": true, "allowTypedFunctionExpressions": true}
+		]
 	}
 }
