--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,7 @@
 		"esModuleInterop": true,
 		"outDir": "dist",
 		"experimentalDecorators": true,
-		"types": [
-			"node",
-			"reflect-metadata"
-		],
+		"types": ["node", "reflect-metadata"]
 	},
-	"include": [
-		"src/**/*"
-	],
+	"include": ["src/**/*"]
 }
