--- a/.eslintrc
+++ b/.eslintrc
@@ -11,15 +11,11 @@
 		"new-cap": "warn",
 		"prefer-arrow-callback": ["error", {"allowNamedFunctions": true}],
 		"class-methods-use-this": "off",
-		"max-len": ["error", {"code": 200}],
-		"space-before-function-paren": ["error", {"anonymous": "never", "named": "never", "asyncArrow": "always"}],
 		"no-return-assign": ["error", "except-parens"],
 		"no-console": "off",
-		"function-paren-newline": ["error", "consistent"],
-		"lines-between-class-members": ["error", "always", {"exceptAfterSingleLine": true}],
 		"max-statements": ["warn", {"max": 100}],
 		"no-plusplus": "off",
-		"no-unused-vars": ["error"],
+		"no-unused-vars": "off",
 
 		// Typescript
 		"@typescript-eslint/no-unused-vars": ["error", {"varsIgnorePattern": "d"}],
