add bulk delete functionality

--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,8 @@
-DB=bot.db
 DISCORD_TOKEN=
 PREFIX=!
+
+# List of roleIds that can be used by the RoleStealer service
+STEALABLE_ROLES=
+
+# How long to wait before removing the delete confirmation message (ms)
+DELETE_CONFIRMATION=5000
