--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "node dist/index.js",
-		"watch": "tsc -p tsconfig.json -w"
+		"watch": "tsc -p tsconfig.json -w",
+		"dev": "DEBUG='bot*' nodemon dist/index.js"
 	},
 	"dependencies": {
 		"debug": "^4.3.2",
