update docker build script

--- a/.env.default
+++ b/.env.default
@@ -6,3 +6,6 @@ STEALABLE_ROLES=
 
 # How long to wait before removing the delete confirmation message (ms)
 DELETE_CONFIRMATION=5000
+
+# Channel to look for quotes in
+QUOTE_CHANNEL=
