--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    stage: build
     steps:
       - uses: actions/checkout@v2
       - name: Build the Docker image
@@ -17,7 +17,7 @@ jobs:
 
   push:
     runs-on: ubuntu-latest
-
+    stage: deploy
     steps:
       - uses: actions/checkout@v2
       - name: Push the Docker image
