--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 stages:
   - stage: build
     jobs:
-      - job: build
+      build:
         runs-on: ubuntu-latest
         steps:
           - uses: actions/checkout@v2
@@ -18,7 +18,7 @@ stages:
 
   - stage: deploy
     jobs:
-      - job: push
+      push:
         runs-on: ubuntu-latest
         stage: deploy
         steps:
