--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,8 @@ jobs:
         run: docker build . -t msawatzky75/marty:nightly
 
       - name: Login to docker
-        run: docker login -u msawatzky75 -p $DOCKER_ACCESS_TOKEN
+        uses: docker/login-action@v2
+        run: docker login -u msawatzky75 -p ${{secrets.DOCKER_ACCESS_TOKEN}}
 
       - name: Push the Docker image
         run: docker push msawatzky75/marty:nightly
