--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
 		"no-unused-vars": "off",
 
 		// Typescript
-		"@typescript-eslint/no-unused-vars": ["error", {"varsIgnorePattern": "d"}],
+		"@typescript-eslint/no-unused-vars": ["warn", {"varsIgnorePattern": "d"}],
 		"@typescript-eslint/explicit-member-accessibility": ["off"],
 		"@typescript-eslint/explicit-function-return-type": [
 			"off",
