--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"outDir": "dist",
+		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"types": ["node", "reflect-metadata"]
 	},
