--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start": "node dist/index.js",
 		"watch": "tsc -p tsconfig.json -w",
 		"build": "tsc -p tsconfig.json",
-		"dev": "DEBUG='bot*' nodemon dist/index.js",
+		"dev": "nodemon dist/index.js --debug=\"bot.*\"",
 		"prettier": "prettier --write ."
 	},
 	"dependencies": {
