--- a/.env.default
+++ b/.env.default
@@ -1,13 +1,12 @@
-DISCORD_TOKEN=
-PREFIX=!
-
-# List of roleIds that can be used by the RoleStealer service
-STEALABLE_ROLES=
-
-# How long to wait before removing the delete confirmation message (ms)
-DELETE_CONFIRMATION=5000
+# bot token
+TOKEN=
+# bot application id
+CLIENT=
+# guild id
+GUILD=
 
 # Channel to look for quotes in
 QUOTE_CHANNEL=
 
-COMMAND_CHANNEL_WHITELIST=
+# List of roleIds that can be used by the RoleStealer service
+STEALABLE_ROLES=
