--- a/.env.default
+++ b/.env.default
@@ -11,3 +11,4 @@ QUOTE_CHANNEL=
 # List of roleIds that can be used by the RoleStealer service
 STEALABLE_ROLES=
 ROLE_STEALER_CONFIRMATION=true
+ROLE_STEALER_DELETE=true
