--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
-		"start": "node dist/index.js",
+		"start": "node dist/src/index.js",
 		"watch": "tsc -p tsconfig.json -w",
-		"build": "tsc -p tsconfig.json",
-		"dev": "DEBUG=\"bot.*\" nodemon dist/index.js",
+		"build": "rimraf dist && tsc -p tsconfig.json",
+		"dev": "DEBUG=\"bot.*\" nodemon dist/src/index.js",
 		"prettier": "prettier --write .",
-		"register": "DEBUG=\"bot.register-commands\" node ./dist/register-commands.js"
+		"register": "DEBUG=\"bot.register-commands\" node ./dist/src/register-commands.js"
 	},
 	"dependencies": {
 		"@discordjs/rest": "^1.1.0",
@@ -30,7 +30,8 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"nodemon": "^2.0.19",
-		"prettier": "^2.7.1"
+		"prettier": "^2.7.1",
+		"rimraf": "^3.0.2"
 	},
 	"packageManager": "yarn@3.2.3"
 }
