update .env.default to reflect auto register slash command changes

--- a/.env.default
+++ b/.env.default
@@ -5,8 +5,8 @@ CLIENT=
 # guild id
 GUILD=
 
-# Channel to look for quotes in
-QUOTE_CHANNEL=
+# Automatically register all slash commands on bot startup
+AUTO_REGISTER=true
 
 # List of roleIds that can be used by the RoleStealer service
 STEALABLE_ROLES=
