--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -1,8 +1,10 @@
 name: Marty Latest
 
 on:
-  push:
-    branches: [master]
+  release:
+    types:
+      - published
+      - unpublished
 
 jobs:
   build:
