--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,5 @@
   "prettier.useTabs": true,
   "prettier.trailingComma": "all",
   "prettier.bracketSpacing": false,
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.js"
+  "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs"
 }
