--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "discord-bot-js",
-	"version": "2.4.1",
+	"version": "2.5.0",
 	"private": true,
 	"repository": "git@github.com:msawatzky75/discord-bot-js.git",
 	"author": "Matthew Sawatzky <msawatzky75@gmail.com>",
@@ -18,6 +18,7 @@
 		"debug": "^4.3.4",
 		"discord.js": "^14.14.1",
 		"dotenv": "^16.3.1",
+		"fuse.js": "^7.0.0",
 		"typescript": "5.3.3"
 	},
 	"devDependencies": {
