--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,11 @@
     "**/.yarn": true,
     "**/.pnp.*": true
   },
-  "eslint.nodePath": ".yarn/sdks",
-  "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "prettier.printWidth": 120,
   "prettier.useTabs": true,
   "prettier.trailingComma": "all",
-  "prettier.bracketSpacing": false,
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.cjs"
+  "prettier.bracketSpacing": false
 }
