--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
 	},
 	"dependencies": {
 		"@discordjs/rest": "^2.4.0",
+		"chart.js": "^4.4.9",
 		"debug": "^4.4.0",
 		"discord.js": "^14.16.3",
 		"dotenv": "^16.4.7",
 		"fuse.js": "^7.0.0",
+		"moment": "^2.30.1",
+		"skia-canvas": "^2.0.2",
 		"typescript": "^5.7.2"
 	},
 	"devDependencies": {
@@ -31,7 +34,7 @@
 		"eslint-plugin-import": "^2.31.0",
 		"nodemon": "^3.1.9",
 		"prettier": "^3.4.2",
-		"rimraf": "^5.0.10"
+		"rimraf": "^6.0.1"
 	},
 	"packageManager": "yarn@4.0.2"
 }
